--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,7 +10,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/"> WORKIT </a>
+            <a class="navbar-brand" href="/"> WORK </a>
             <ul class="nav navbar-nav">
 
             </ul>
